force-app/main/default/objects/LoadLocation__c/LoadLocation__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_WarehouseOnlineHelp</customHelpPage>
    <description>Warehouse (Load Location)</description>
    <label>CFS・CY・DEPOT</label>
    <nameField>
        <label>WAREHOUSE NAME</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>