force-app/main/default/objects/LoadLocation__c/fields/LoadAddress__c.field-meta.xml
<CustomField>
    <fullName>LoadAddress__c</fullName>
    <label>WAREHOUSE ADDRESS(LOCAL)</label>
    <type>TextArea</type>
</CustomField>