force-app/main/default/objects/LoadLocation__c/fields/LoadAddress_English__c.field-meta.xml
<CustomField>
    <fullName>LoadAddress_English__c</fullName>
    <label>WAREHOUSE ADDRESS (ENG)</label>
    <type>TextArea</type>
</CustomField>