force-app/main/default/objects/LoadLocation__c/fields/LoadLocation_english__c.field-meta.xml
<CustomField>
    <fullName>LoadLocation_english__c</fullName>
    <label>WAREHOUSE NAME(ENG)</label>
    <type>TextArea</type>
</CustomField>