force-app/main/default/objects/LoadLocation__c/fields/LoadLocationID__c.field-meta.xml
<CustomField>
    <fullName>LoadLocationID__c</fullName>
    <displayFormat>WR-{00000}</displayFormat>
    <label>WAREHOUSE REGISTERED ID</label>
    <type>AutoNumber</type>
</CustomField>