force-app/main/default/objects/LoadLocation__c/fields/LoadLocationPIC__c.field-meta.xml
<CustomField>
    <fullName>LoadLocationPIC__c</fullName>
    <label>PIC OF WAREHOUSE</label>
    <type>TextArea</type>
</CustomField>