force-app/main/default/objects/LoadLocation__c/fields/LoadTEL__c.field-meta.xml
<CustomField>
    <fullName>LoadTEL__c</fullName>
    <label>TEL</label>
    <type>Phone</type>
</CustomField>