force-app/main/default/objects/LoadLocation__c/fields/NACCS__c.field-meta.xml
<CustomField>
    <fullName>NACCS__c</fullName>
    <label>WAREHOUSE CODE IN CUSTOMS OFFICE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>