force-app/main/default/objects/LoadLocation__c/fields/others__c.field-meta.xml
<CustomField>
    <fullName>others__c</fullName>
    <label>REMARK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>