force-app/main/default/objects/LoadLocation__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks(AN)</label>
    <type>TextArea</type>
</CustomField>