force-app/main/default/objects/LoadLocation__c/fields/WharehouseCompany__c.field-meta.xml
<CustomField>
    <fullName>WharehouseCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WAREHOUSE CORPORATE NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>WharehouseCompany</relationshipName>
    <type>Lookup</type>
</CustomField>