force-app/main/default/objects/LoadLocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>LoadLocation_english__c</columns>
    <columns>LoadLocationID__c</columns>
    <columns>WharehouseCompany__c</columns>
    <columns>LoadLocationPIC__c</columns>
    <columns>LoadTEL__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Remarks__c</columns>
    <columns>LoadAddress_English__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>